--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,12 +6,31 @@
 
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card
+        photoCover="https://media.contentapi.ea.com/content/dam/news/www-ea/images/2022/09/ea-motive-new-title-teaser-16x9-featured.jpg.adapt.crop191x100.628p.jpg"
+        cardTitle="NOVO HOMEM DE FERRO EM 3D"
+        cardDescription="Marvel anúncia novo homem de ferro"
+        ></app-big-card>
+        <app-big-card
+        photoCover="https://uploads.jovemnerd.com.br/wp-content/uploads/2023/04/star_wars_jedi_survivor_review__3h7u25g-1210x544.jpg"
+        cardTitle="NOVO JEDI NA ÁREA"
+        cardDescription="Mestre yoda anúncia que novo Jedi vai arrebentar a boca do balão"
+        ></app-big-card>
     </div>
     <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+        photoCover="https://cdn.diariodegoias.com.br/wp-content/uploads/2022/12/the-last-of-us-serie-hbo-jogo-estreia-lancamento.jpg"
+        cardTitle="Nova série anúnciada"
+        ></app-small-card>
+        <app-small-card
+        photoCover="https://www.einerd.com.br/wp-content/uploads/2019/04/capit%C3%A3o-am%C3%A9rica-ultimato-e1562254795838.jpg"
+        cardTitle="Capitão América morreu ?"
+        ></app-small-card>
+        <app-small-card
+        photoCover="https://br.web.img3.acsta.net/newsv7/21/07/26/18/49/2684291.jpg"
+        cardTitle="Lakosti faz ponta em filme"
+        ></app-small-card>
+        
     </div>
     
 </div>
