--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -20,6 +20,10 @@
     align-items: center;
 }
 
+.small-card__title > h1 {
+    font-size: 1.4rem;
+}
+
 .container__small-card__separator {
     margin-top: 10px;
 }
