--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -30,6 +30,14 @@
         photoCover="https://br.web.img3.acsta.net/newsv7/21/07/26/18/49/2684291.jpg"
         cardTitle="Lakosti faz ponta em filme"
         ></app-small-card>
+        <app-small-card
+        photoCover="https://i.pinimg.com/600x315/ae/29/a9/ae29a9ff564575cd69287fefb28c8c0f.jpg"
+        cardTitle="O Mago é implacável"
+        ></app-small-card>
+        <app-small-card
+        photoCover="https://cinepop.com.br/wp-content/uploads/2023/03/zachary-levi-adao-negro-shazam-dwayne-johnson-the-rock.jpg"
+        cardTitle="Geração raiz VS geração nutela, quem vence ?"
+        ></app-small-card>
         
     </div>
     
