--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -28,7 +28,7 @@
         ></app-small-card>
         <app-small-card
         photoCover="https://br.web.img3.acsta.net/newsv7/21/07/26/18/49/2684291.jpg"
-        cardTitle="Lakosti faz ponta em filme"
+        cardTitle="Lacoste faz ponta em filme"
         ></app-small-card>
         <app-small-card
         photoCover="https://i.pinimg.com/600x315/ae/29/a9/ae29a9ff564575cd69287fefb28c8c0f.jpg"
