--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -2,8 +2,8 @@
     margin-left: 20px;
     margin-right: 20px;
     border-radius: 5px;
-    width: 400px;
-    height: 350px;
+    width: 550px;
+    height: 450px;
 
     display: flex;
     flex-direction: column;
@@ -28,4 +28,5 @@
 .big-card__photo > img {
     width: 100%;
     min-width: 400px;
+    height: 100%;
 }
