--- a/src/app/components/menu-title/menu-title.responsive.component.css
+++ b/src/app/components/menu-title/menu-title.responsive.component.css
@@ -1,5 +1,5 @@
-@media screen and (min-wdth: 600px) {
-    .container__menu-title > h1{
-        font-size: 35px;
+@media screen and (max-wdth: 600px) {
+    .menu__title__container > h1{
+        font-size: 50px;
     }
 }
