--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -6,7 +6,7 @@
         </div>
         
         <div class="small-card__title">
-            <h1><a href="#"> {{ cardTitle }}
+            <h1><a [routerLink]="['content' , Id]"> {{ cardTitle }}
             </a></h1>
         </div>
     </div>
