--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,9 +1,9 @@
 <div class="container__menu-bar">
     <ul>
-        <li><a href="#">Linkedin</a></li>
+        <li><a href="https://www.linkedin.com/in/pitagorasgm/" target="_blank">Linkedin</a></li>
         <li><span>•</span></li>
-        <li><a href="#">GitHub</a></li>
+        <li><a href="https://github.com/juniorpgm34" target="_blank">GitHub</a></li>
         <li><span>•</span></li>
-        <li><a href="#">Youtube</a></li>
+        <li><a href="https://www.behance.net/pitagorasgm" target="_blank">Behance</a></li>
     </ul>
 </div>
