--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -11,6 +11,6 @@
         </div>
     </div>
     <div class="container__small-card__separator">
-        <hr>
+        <div class="divider"></div>
     </div>
 </div>
