--- a/src/app/pages/content/content.component.html
+++ b/src/app/pages/content/content.component.html
@@ -1,5 +1,5 @@
 <div class="hr">
-    <hr>
+    <div class="divider"></div>
 </div>
 
 <div class="container__content">
@@ -11,7 +11,7 @@
         <h1> {{ contentTitle }} </h1>
     </div>
     <div class="content__description">
-        <p>
+        <p >
             {{ contentDescription }}
         </p>
     </div>
