--- a/src/app/components/menu-title/menu-title.component.css
+++ b/src/app/components/menu-title/menu-title.component.css
@@ -1,9 +1,10 @@
 .menu__title__container {
     color: white;
+    margin-top: 1.5rem
 
 }
-.menu__title__container > h1 {
-    margin-top: 15px;
+
+.menu__title__container > div > h1 {
     margin-bottom: 15px ;
     font-size: 200px;
     font-family: 'Segoe Ui';
@@ -11,7 +12,3 @@
     justify-content: center;
 }
 
-.menu__title__container > hr {
-    margin-top: 20px;
-    margin-bottom: 15px ;
-}
