--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,5 +1,7 @@
 <div class="menu__title__container">
-    <hr>
-    <h1>JUNIOR BLOG</h1>
-    <hr>
+    <div class="divider"></div>
+    <div>
+        <h1>JUNIOR BLOG</h1>
+    </div>
+    <div class="divider"></div>
 </div>
