--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
 * {
     margin: 0;
     padding: 0;
@@ -13,3 +14,6 @@ a {
     text-decoration: none;
 }
 
+.divider {
+    border: 1px solid rgb(75, 75, 75);
+}
